# makefile-study

./: README.md
CMake/: README.md
CMake/code/cmake-install-export/: CMakeLists.txt  build.sh  test_hello.c  test_hello.h
CMake/code/configure-file/: CMakeLists.txt
CMake/code/configure-file/include/: utils.h  utils.h.in
CMake/code/configure-file/src/: main.cc
CMake/code/soldier-stormed/: CMakeLists.txt
CMake/code/swap/include/: swap.h
Test/: Makefile
Test/f1/: Makefile
Test/f2/: Makefile
Test/include/: myinclude.h
Test/main/: Makefile  main.c
